tests/parser/statement_assign_err6.mtp
begin
	(* Not a real value *)	
	something := 10something2;
end
.